--- a/src/pages/portfolio/style.css
+++ b/src/pages/portfolio/style.css
@@ -1,61 +1,57 @@
 /* style.css */
 .portfolio-item {
-    width: 100%;
-    height: 400px;
-    display: flex;
-    margin-bottom: 20px;
-    background-color: white;
-    border-radius: 10px;
-    overflow: hidden;
-    box-shadow: 0 10px 15px 0 rgba(0, 0, 0, 0.25);
-    transition: transform 0.5s ease;
-  }
-  
-  .portfolio-item:hover {
-    transform: scale(1.05);
-  }
-  
-  .video-wrapper,
-  .item-content {
-    width: 50%;
-    overflow: hidden;
-    transition: width 0.5s ease;
-    margin-right: 20px;
-    margin-left: 20px;
-  }
-  
-  .portfolio-item:hover .video-wrapper,
-  .portfolio-item:hover .item-content {
-    width: 50%;
-  }
-/* style.css */
-.video-wrapper video {
-    margin-top: 15px;
-    width: 100%;
-    height: 90%;
-    background-color: black;
-    border: 3px solid black;
-    border-radius: 20px;
-    outline: none; /* Remove a borda padrão do vídeo */
-    transition: transform 0.3s ease; /* Adiciona uma transição suave */
-  }
-  
-  .video-wrapper video:hover {
-    transform: scale(1.05);
-    border: 3px solid black;
-    border-radius: 20px;
-  }
-  
-  .item-content {
-    padding: 20px;
-    box-sizing: border-box;
-    color: #495057;
-  
-  }
-  
-  .portfolio-item:hover .item-content {
-    padding: 20px;
-  }
- 
+  width: 100%;
+  height: 400px;
+  display: flex;
+  margin-bottom: 20px;
+  background-color: white;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 10px 15px 0 rgba(0, 0, 0, 0.25);
+  transition: transform 0.5s ease;
+}
 
- 
+.portfolio-item:hover {
+  transform: scale(1.05);
+}
+
+.portfolio-item:hover .video-wrapper,
+.portfolio-item:hover .item-content {
+  width: 50%;
+}
+
+.video-wrapper,
+.item-content {
+  width: 100%; /* Modificado de 50% para 100% */
+  overflow: hidden;
+  transition: width 0.5s ease;
+  margin-right: 20px;
+  margin-left: 20px;
+}
+
+.video-wrapper video {
+  margin-top: 15px;
+  width: 100%;
+  height: 90%;
+  background-color: black;
+  border: 3px solid black;
+  border-radius: 20px;
+  outline: none;
+  transition: transform 0.3s ease;
+}
+
+.video-wrapper video:hover {
+  transform: scale(1.05);
+  border: 3px solid black;
+  border-radius: 20px;
+}
+
+.item-content {
+  padding: 20px;
+  box-sizing: border-box;
+  color: #495057;
+}
+
+.portfolio-item:hover .item-content {
+  padding: 20px;
+}
