--- a/src/app/pageProject/style.css
+++ b/src/app/pageProject/style.css
@@ -1,15 +1,16 @@
 /* projectDetailsStyle.css */
+
 .project-details {
     width: 80%;
     margin: 0 auto;
     padding: 20px;
     box-sizing: border-box;
     text-align: center;
-  }
-  
-  .project-details video {
+}
+
+.project-details video {
     width: 100%;
-    max-width: 800px; 
+    max-width: 800px;
     height: auto;
     background-color: black;
     border: 3px solid black;
@@ -17,54 +18,65 @@
     outline: none;
     margin-top: 20px;
     transition: transform 0.3s ease;
-  }
-  
-  .project-details video:hover {
+}
+
+.project-details video:hover {
     transform: scale(1.05);
     border: 3px solid black;
     border-radius: 20px;
-  }
-  
-  .project-details .project-content {
+}
+
+.project-details .project-content {
     width: 100%;
     margin-top: 20px;
-  }
-  
-  .project-details .project-content h2 {
-    color:white;
+}
+
+.project-details .project-content h2 {
+    color: white;
     margin-bottom: 10px;
-  }
-  
-  .project-details .project-content p {
-    color:grey;
+}
+
+.project-details .project-content p {
+    color: grey;
     margin-bottom: 20px;
     margin-top: 20px;
-  }
-  
-  .project-image {
+}
+
+.project-details .project-content .tecnologias {
+    background-color: white;
+    width: 400px;
+    border-radius: 20px;
+    color: black;
+    padding: 20px;
+    margin: 20px auto; /* Centraliza horizontalmente e adiciona margem superior/inferior */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Adiciona uma sombra sutil */
+    text-align: center; 
+}
+
+
+.project-image {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     padding: 20px;
-  }
-  
-  .image-container {
-    width: 1000px;
-    height: 300px;
+}
+
+.image-container {
+    max-width: 300px; /* Defina a largura máxima conforme necessário */
+    max-height: 300px; /* Defina a altura máxima conforme necessário */
     overflow: hidden;
     margin: 15px;
     border: 5px solid white;
     border-radius: 10px;
-  }
-  
-  .linkr {
+}
+
+.linkr {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: cover; /* Garante que a imagem cubra completamente o contêiner */
     transition: transform 0.3s ease;
-  }
-  
-  .linkr:hover {
+}
+
+.linkr:hover {
     transform: scale(1.1);
-  }
-  
+}
